crates/sui-prover/tests/snapshots/reals.fail.move.snap
---
source: crates/sui-prover/tests/integration.rs
expression: output
---
exiting with verification errors
error: prover::ensures assertion does not hold
   ┌─ tests/inputs/reals.fail.move:20:3
   │
20 │   ensures(y_real  != y_real);
   │   ^^^^^^^^^^^^^^^^^^^^^^^^^^
   │
   =     at tests/inputs/reals.fail.move:16: foo_spec
